# gst-web

./: .gitignore  Dockerfile  README.md  install.sh  meson.build
gst-web/: meson.build  plugin.vala  utils.vala  webserverbin.vala
share/: hls.nginx.conf
share/gst-web/: hls.nginx.conf
share/gst-web/www/: index.html
share/www/: index.html
test/: gstweb.h  meson.build  test_webserverbin.c
